2009-06-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c src/save.c src/graphics.c src/term_api.h docs/gnuplot.doc
	docs/plotstyles.gnu:  Add new linestyle property 'pointinterval'.

	This is a modified version of patchset #2653943 contributed by
	Hans (oe6jwf@users.sourceforge.net).

	* src/term_api.h term/post.trm term/cairo.trm term/pdf.trm term/cgm.trm
	term/pbm.trm term/emf.trm term/win.trm:  Add a flag TERM_MONOCHROME
	that indicates a terminal wants black lines only, even if it is capable
	of RGB or palette color.

2009-06-05  Ethan A Merritt  <merritt@u.washington.edu>

	* time.c (ggmtime): Counting back from 1.e38 by one year at a time takes
	forever. Limit the range of acceptable time values to +/- 10^12 seconds,
	which gives a range of 33688 years forward or back.
	* axis.c (gen_tics): Skip calculation of 0-length minor ticks

2008-06-04  Peter Hedwig  <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua term/lua/gnuplot-tikz.help
	share/LaTeX/gnuplot-lua-tikz.sty: Update the lua terminal scripts to
	accept a font size in the second slot of a font descriptor string.

2009-06-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c:  The following test script triggered multiple problems.
	                "set multi; set x2data time; set x2tics; unset multi;"
	- initialize mouse_x, mouse_y to -1;  test before using
	- initialize mouse values with VERYLARGE (replace magic number 1e38)
	- xDateTimeFormat: do not attempt to convert VERYLARGE to a date
	Bugfix.

2009-06-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/gd.trm:  Remove redundant section in gif help text.

2009-06-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Enhanced text markup applied to a
	single multibyte character was producing garbage.  Fix this for UTF-8.
	Other multibyte encoding may still trigger this problem.
	Bugfix #2800539

2009-05-31  Ethan A Merritt  <merritt@u.washington.edu>
